Improved code to permanently center the form and added a slider when the list is too long. Also fixed bugs in the code

--- a/src/Form.css
+++ b/src/Form.css
@@ -59,3 +59,16 @@ input[type="checkbox"] {
     cursor: pointer;
     margin-left: 15px;
 }
+.App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 5px;
+}
+
+ul {
+    text-align: left;
+    max-height: 100px;
+    overflow: auto;
+}
